Closed Bug 395445 Opened 18 years ago Closed 18 years ago

Tag and Star icon both show for Location bar entries

Categories

(Firefox :: Address Bar, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
Firefox 3 alpha8

People

(Reporter: marcia, Assigned: moco)

Details

Attachments

(2 files)

Attached image Screenshot of issue
Seen using Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a8pre) Gecko/2007090704 Minefield/3.0a8pre. In this instance I was using an existing Minefield only profile. STR: 1. Visit espn.go.com 2. Click twice on the star icon in the URL bar. Add a "sports" tag. 3. Go to the URL bar type "sports" 4. Observe attached screenshot. I get a both icons showing with espn. It is possible that in an earlier Minefield session I may have clicked on the star icon only. But in my initial session this AM when I was testing I saw this behavior with several sites. In some instances I was using the "Add bookmark" command to tag instead of clicking on the star icon directly. Testing the above steps with a fresh profile does not show this behavior.
Flags: in-litmus?
> Testing the above steps with a fresh profile does not show this behavior. I see this with a fresh profile, looking into it, thanks marcia for catching this!
Assignee: nobody → sspitzer
Status: NEW → ASSIGNED
OS: Mac OS X → All
Hardware: PC → All
Target Milestone: --- → Firefox 3 M8
Comment on attachment 280121 [details] [diff] [review] patch, thanks for the catching this marcia looks ok, r=me.
Attachment #280121 - Flags: review?(dietrich) → review+
Comment on attachment 280121 [details] [diff] [review] patch, thanks for the catching this marcia seeking approval for m8
Attachment #280121 - Flags: approval1.9?
Attachment #280121 - Flags: approval1.9? → approval1.9+
fixed, thanks again to marcia for catching this so quickly. Checking in toolkit/components/places/src/nsNavHistoryAutoComplete.cpp; /cvsroot/mozilla/toolkit/components/places/src/nsNavHistoryAutoComplete.cpp,v < -- nsNavHistoryAutoComplete.cpp new revision: 1.20; previous revision: 1.19 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a8pre) Gecko/2007090804 Minefield/3.0a8pre. I verified with a new profile using several different combinations of adding tags (From Bookmarks Menu, from location bar).
Status: RESOLVED → VERIFIED
Litmus Triage Team: stephend, let me know if you want to write this one or I can cover as well.
(In reply to comment #7) > Litmus Triage Team: stephend, let me know if you want to write this one or I > can cover as well. Got it: http://litmus.mozilla.org/show_test.cgi?id=4681 in-litmus+ Thanks for logging the bug with a nice testcase, Marcia (and for verifying!)
Flags: in-litmus? → in-litmus+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: