fix for bug #395445:  Tag and Star icon both show for Location bar entries r=dietrich, a=mconnor for m8